# scipion-em-localrec

./: .gitignore  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: build.yml  publish_and_tag.yml
localrec/: __init__.py  bibtex.py  constants.py  convert.py  progressbar.py  protocols.conf  utils.py
localrec/protocols/: __init__.py  protocol_classify_subparticles_distribution.py  protocol_extract_coordinates_from_subparticles.py  protocol_extract_random_coordinates_from_subparticles.py  protocol_filter_subparticles.py  protocol_localized.py  protocol_localized_extraction.py  protocol_localized_set_origin.py  protocol_localized_stitch.py  protocol_localized_stitch_models.py  protocol_localized_subset.py  protocol_subparticles_distribution.py  protocol_subparticles_distribution_new.py  protocol_super_impose.py
localrec/tests/: __init__.py  test_protocol_localized_reconstruction.py
localrec/viewers/: __init__.py  viewer.py  viewer_protocol_subparticles_distribution.py
opic/: __init__.py  bibtex.py  constants.py  convert.py
opic/protocols/: __init__.py  protocol_localized.py
opic/tests/: test_protocol_localized_reconstruction.py
