[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-localrec"
dynamic = ["version", "dependencies"]
description = "Plugin to use localrec within the Scipion framework"
authors = [
    {name = "Scipion Team", email = "scipion@cnb.csic.es"}
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["scipion", "cryoem", "cryoet", "imageprocessing", "scipion-3.0"]

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-localrec"
Issues = "https://github.com/scipion-em/scipion-em-localrec/issues"

[tool.setuptools.dynamic]
version = {attr = "localrec.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"localrec" = ["protocols.conf", "icon.png", "templates/*"]

[project.entry-points."pyworkflow.plugin"]
localrec = "localrec"
